[package]
name = "zola"
version = "0.18.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]

include = ["src/**/*", "LICENSE", "README.md"]

[build-dependencies]
winres = "0.1"
time = "0.3"

[[bin]]
name = "zola"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Below is for the serve cmd
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
notify = "4"
ws = "0.9"
ctrlc = "3"
open = "5"
pathdiff = "0.2"
# For mimetype detection in serve mode
mime_guess = "2.0"
# For essence_str() function, see https://github.com/getzola/zola/issues/1845
mime = "0.3.16"


site = { path = "components/site" }
errors = { path = "components/errors" }
console = { path = "components/console" }
utils = { path = "components/utils" }
libs = { path = "components/libs" }


[dev-dependencies]
same-file = "1"

[features]
default = ["rust-tls"]
rust-tls = ["libs/rust-tls"]
native-tls = ["libs/native-tls"]
indexing-zh = ["libs/indexing-zh"]
indexing-ja = ["libs/indexing-ja"]

[workspace]
members = ["components/*"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[package.metadata.winres]
OriginalFilename = "zola.exe"
InternalName = "zola"
