[package]
name = "zola"
version = "0.21.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]

include = ["src/**/*", "LICENSE", "README.md"]

[build-dependencies]
winres = "0.1"
time = "0.3"

[[bin]]
name = "zola"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Below is for the serve cmd
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "macros", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
notify-debouncer-full = "0.5"
ctrlc = "3"
open = "5"
pathdiff = "0.2"
# For mimetype detection in serve mode
mime_guess = "2.0"
# For essence_str() function, see https://github.com/getzola/zola/issues/1845
mime = "0.3.16"


site = { path = "components/site" }
config = { path = "components/config" }
errors = { path = "components/errors" }
console = { path = "components/console" }
utils = { path = "components/utils" }
libs = { path = "components/libs" }


[dev-dependencies]
same-file = "1"

[features]
default = ["rust-tls", "gzip", "brotli"]
rust-tls = ["libs/rust-tls"]
native-tls = ["libs/native-tls"]
indexing-zh = ["libs/indexing-zh"]
indexing-ja = ["libs/indexing-ja"]
gzip = ["site/gzip"]
brotli = ["site/brotli"]

[workspace]
members = ["components/*"]

[workspace.package]
version = "0.21.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[package.metadata.winres]
OriginalFilename = "zola.exe"
InternalName = "zola"
