[package]
name = "zola"
version.workspace = true
edition.workspace = true
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "EUPL-1.2"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]

include = ["src/**/*", "LICENSE", "README.md"]

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2.31"
tauri-winres = "0.3"
time = "0.3"

[[bin]]
name = "zola"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Below is for the serve cmd
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "ws"] }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time", "net", "sync"] }
notify-debouncer-full = "0.6"
ctrlc = "3"
open = "5"
# For mimetype detection in serve mode
mime_guess = "2.0"
# For essence_str() function, see https://github.com/getzola/zola/issues/1845
mime = "0.3.16"
env_logger = { version ="0.11", default-features = false }

site = { workspace = true }
errors = { workspace = true }
console = { workspace = true }
utils = { workspace = true }
# For feature forwarding
link_checker = { workspace = true }
search = { workspace = true }
templates = { workspace = true }
reqwest = { workspace = true }

# Direct workspace deps used by the binary
ahash = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
globset = { workspace = true }
log = { workspace = true }
percent-encoding = { workspace = true }
relative-path = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "local-offset", "parsing"] }
url = { workspace = true }

[dev-dependencies]
same-file = "1"

[features]
default = ["rust-tls"]
rust-tls = ["reqwest/rustls-tls", "link_checker/rust-tls", "templates/rust-tls"]
native-tls = ["reqwest/default-tls", "link_checker/native-tls", "templates/native-tls"]
indexing-zh = ["search/indexing-zh"]
indexing-ja = ["search/indexing-ja"]

[workspace]
members = ["components/*"]

[workspace.package]
version = "0.22.1"
edition = "2024"

[workspace.dependencies]
# External dependencies
ahash = "0.8"
ammonia = "4"
anstream = "0.6"
anstyle = "1"
avif-parse = "1.3.2"
base64 = "0.22"
csv = "1"
elasticlunr-rs = { version = "3.0.2", features = ["da", "no", "de", "du", "es", "fi", "fr", "hu", "it", "pt", "ro", "ru", "sv", "tr", "ko"] }
filetime = "0.2"
gh-emoji = "1"
globset = "0.4"
grass = { version = "0.13", default-features = false, features = ["random"] }
image = { version = "0.25", default-features = true, features = ["avif"] }
fs-err = "3.2.2"
lexical-sort = "0.3"
log = "0.4"
minify-html = "0.18"
nom-bibtex = "0.6"
num-format = "0.4"
percent-encoding = "2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "0.11", default-features = false }
roxmltree_to_serde = "0.6"
rayon = "1"
regex = "1"
relative-path = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
slug = "0.1"
svg_metadata = "0.6"
#tera = { version = "1.17", features = ["preserve_order", "date-locale"] }
tera = {path = "../tera2/tera", features = ["fast", "glob_fs"] }
time = "0.3"
toml = "0.9"
unic-langid = "0.9"
unicode-segmentation = "1.2"
url = "2"
walkdir = "2"
webp = "0.3"
giallo = {version = "0.2", features = ["dump"]}
insta = "1"
jiff = "0.2"

# Internal crates
config = { path = "components/config" }
console = { path = "components/console" }
content = { path = "components/content" }
errors = { path = "components/errors" }
imageproc = { path = "components/imageproc" }
link_checker = { path = "components/link_checker" }
markdown = { path = "components/markdown" }
search = { path = "components/search" }
site = { path = "components/site" }
templates = { path = "components/templates" }
utils = { path = "components/utils" }
render = { path = "components/render" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[package.metadata.winres]
OriginalFilename = "zola.exe"
InternalName = "zola"
