[package]
name = "config"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
serde = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
unic-langid = { workspace = true }
giallo = { workspace = true }

errors = { workspace = true }
utils = { workspace = true }
