[package]
name = "config"
version.workspace = true
edition.workspace = true
include = ["src/**/*"]

[dependencies]
serde = { workspace = true }
globset = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
unic-langid = { workspace = true }
giallo = { workspace = true }

errors = { workspace = true }
utils = { workspace = true }
