[package]
name = "content"
version.workspace = true
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }

errors = { path = "../errors" }
utils = { path = "../utils" }
libs = { path = "../libs" }
config = { path = "../config" }

# TODO: remove it?
markdown = { path = "../markdown" }

[dev-dependencies]
# TODO: can we solve that usecase in src/page.rs in a simpler way? A custom macro_rules! maybe
test-case = "3"

tempfile = "3.3.0"
templates = { path = "../templates" }
