[package]
name = "content"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting", "macros"] }
ahash = { workspace = true }
lexical-sort = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
tera = { workspace = true }
toml = { workspace = true }
unicode-segmentation = { workspace = true }
walkdir = { workspace = true }

errors = { workspace = true }
utils = { workspace = true }
config = { workspace = true }

[dev-dependencies]
# TODO: can we solve that usecase in src/page.rs in a simpler way? A custom macro_rules! maybe
test-case = "3"
globset = { workspace = true }
tempfile = "3.3.0"
templates = { workspace = true }
