[package]
name = "front_matter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"] }

errors = { path = "../errors" }
utils = { path = "../utils" }
libs = { path = "../libs" }

[dev-dependencies]
test-case = "1"  # TODO: can we solve that usecase in src/page.rs in a simpler way? A custom macro_rules! maybe
