[package]
name = "imageproc"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
fs-err = { workspace = true }
kamadak-exif = "0.6"
tempfile = "3"
ahash = { workspace = true }
avif-parse = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
svg_metadata = { workspace = true }
webp = { workspace = true }

errors = { workspace = true }
utils = { workspace = true }
config = { workspace = true }
perceptual-image = { git = "https://codeberg.org/BezPowell/perceptual-image", branch = "dssim", features = ["avif", "jpeg", "webp"] }

[dev-dependencies]
