[package]
name = "link_checker"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }

config = { workspace = true }
errors = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
mockito = "1.6"

[features]
default = ["rust-tls"]
rust-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]
