[package]
name = "markdown"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
gh-emoji = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-escape = { workspace = true }
regex = { workspace = true }
tera = { workspace = true }
giallo = { workspace = true }
log = { workspace = true }

errors = { workspace = true }
utils = { workspace = true }
config = { workspace = true }

[dev-dependencies]
templates = { workspace = true }
insta = "1.12.0"
