[package]
name = "pagination"
version = "0.1.0"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]

[dependencies]
tera = "0.11.0"
serde = "1.0"
serde_derive = "1.0"

errors = { path = "../errors" }
config = { path = "../config" }
content = { path = "../content" }
utils = { path = "../utils" }

[dev-dependencies]
front_matter = { path = "../front_matter" }
