[package]
name = "rebuild"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]

[dependencies]
errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
library = { path = "../library" }
site = { path = "../site" }

[dev-dependencies]
tempfile = "3"
fs_extra = "1.1"
