[package]
name = "rebuild"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"

[features]
default = ["request"]
request = ["library/request", "site/request"]

[dependencies]
errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
library = { path = "../library", default-features = false }
site = { path = "../site", default-features = false }

[dev-dependencies]
tempfile = "3"
fs_extra = "1.1"
