[package]
name = "rebuild"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"
include = ["src/lib.rs"]

[dependencies]
unic-langid = "0.9"

errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
library = { path = "../library" }
site = { path = "../site" }

[dev-dependencies]
tempfile = "3"
fs_extra = "1.1"
