[package]
name = "rendering"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"

[dependencies]
tera = { version = "1", features = ["preserve_order"] }
syntect = { version = "4.1", default-features = false, features = ["default-fancy"]}
pulldown-cmark = "0.7"
serde = "1"
serde_derive = "1"
pest = "2"
pest_derive = "2"
regex = "1"
lazy_static = "1"

errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
utils = { path = "../utils" }
config = { path = "../config" }
link_checker = { path = "../link_checker" }

[dev-dependencies]
templates = { path = "../templates" }

