[package]
name = "rendering"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"
include = ["src/**/*"]

[dependencies]
tera = { version = "1", features = ["preserve_order"] }
syntect = "4.1"
pulldown-cmark = "0.7"
serde = "1"
serde_derive = "1"
pest = "2"
pest_derive = "2"
regex = "1"
lazy_static = "1"
log = "0.4.8"

errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
utils = { path = "../utils" }
config = { path = "../config" }
link_checker = { path = "../link_checker" }
scraper = { version = "0.12.0", optional = true }

[dev-dependencies]
templates = { path = "../templates" }

[features]
default = ["html-toc"]
html-toc = ["scraper"]
