[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
ammonia = { workspace = true }
elasticlunr-rs = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

errors = { workspace = true }
content = { workspace = true }
config = { workspace = true }

[features]
indexing-zh = ["elasticlunr-rs/zh"]
indexing-ja = ["elasticlunr-rs/ja"]
