[package]
name = "search"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
ammonia = { workspace = true }
elasticlunr-rs = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

errors = { workspace = true }
content = { workspace = true }
config = { workspace = true }

[features]
indexing-zh = ["elasticlunr-rs/zh"]
indexing-ja = ["elasticlunr-rs/ja"]
