[package]
name = "site"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2024"
include = ["src/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"

errors = { path = "../errors" }
config = { path = "../config" }
console = { path = "../console" }
utils = { path = "../utils" }
templates = { path = "../templates" }
search = { path = "../search" }
imageproc = { path = "../imageproc" }
link_checker = { path = "../link_checker" }
libs = { path = "../libs" }
content = { path = "../content" }

# Optional compression dependencies
flate2 = { version = "1", optional = true }
brotli = { version = "7", optional = true }

# Encryption dependencies
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[features]
gzip = ["dep:flate2"]
brotli = ["dep:brotli"]

[dev-dependencies]
tempfile = "3"
path-slash = "0.2"
