[package]
name = "site"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2024"
include = ["src/**/*"]

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
grass = { workspace = true }
tracing = { workspace = true }
minify-html = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
relative-path = { workspace = true }
tera = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

errors = { workspace = true }
config = { workspace = true }
console = { workspace = true }
utils = { workspace = true }
templates = { workspace = true }
search = { workspace = true }
imageproc = { workspace = true }
link_checker = { workspace = true }
content = { workspace = true }

[dev-dependencies]
tempfile = "3"
path-slash = "0.2"
ahash = { workspace = true }
