[package]
name = "site"
version.workspace = true
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition.workspace = true
include = ["src/**/*"]

[dependencies]
serde = { workspace = true }
globset = { workspace = true }
grass = { workspace = true }
log = { workspace = true }
minify-html = { workspace = true }
rayon = { workspace = true }
relative-path = { workspace = true }
tera = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

errors = { workspace = true }
config = { workspace = true }
utils = { workspace = true }
templates = { workspace = true }
search = { workspace = true }
imageproc = { workspace = true }
link_checker = { workspace = true }
content = { workspace = true }
render = { workspace = true }
markdown = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
tempfile = "3"
path-slash = "0.2"
ahash = { workspace = true }
insta = { workspace = true }
