[package]
name = "taxonomies"
version = "0.1.0"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]

[dependencies]
tera = "0.11.0-beta"
slug = "0.1"
serde = "1.0"
serde_derive = "1.0"

errors = { path = "../errors" }
config = { path = "../config" }
content = { path = "../content" }
front_matter = { path = "../front_matter" }
utils = { path = "../utils" }
