[package]
name = "templates"
version = "0.1.0"
edition = "2024"

[dependencies]
errors = { path = "../errors" }
utils = { path = "../utils" }
content = { path = "../content" }
config = { path = "../config" }
imageproc = { path = "../imageproc" }
markdown = { path = "../markdown" }
libs = { path = "../libs" }


[dev-dependencies]
mockito = "1.6"
tempfile = "3"
