[package]
name = "templates"
version.workspace = true
edition.workspace = true

[dependencies]
tera-contrib = {version = "0.2.0-alpha.1", features = ["base64", "date", "urlencode", "json", "filesize_format", "format", "slug", "rand", "regex"] }
base64 = { workspace = true }
csv = { workspace = true }
jiff = { workspace = true }
nom-bibtex = { workspace = true }
num-format = { workspace = true }
roxmltree_to_serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tera = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
giallo = { workspace = true }

markdown = { workspace = true }
errors = { workspace = true }
utils = { workspace = true }
content = { workspace = true }
config = { workspace = true }
imageproc = { workspace = true }
render = { workspace = true }

[dev-dependencies]
mockito = "1.6"
tempfile = "3"

[features]
default = ["rust-tls"]
rust-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]
