[package]
name = "utils"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2024"
include = ["src/**/*"]

[dependencies]
serde = { workspace = true }
filetime = { workspace = true }
globset = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
slug = { workspace = true }
tera = { workspace = true }
time = { workspace = true, features = ["formatting"] }
toml = { workspace = true }
walkdir = { workspace = true }

errors = { workspace = true }

[dev-dependencies]
tempfile = "3"
time = { workspace = true, features = ["formatting", "macros"] }
