[package]
name = "utils"
version.workspace = true
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition.workspace = true
include = ["src/**/*"]

[dependencies]
ahash = { workspace = true }
serde = { workspace = true }
filetime = { workspace = true }
fs-err = { workspace = true }
globset = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
slug = { workspace = true }
tera = { workspace = true }
walkdir = { workspace = true }

errors = { workspace = true }

[dev-dependencies]
tempfile = "3"
